--- a/faster/param/faster.yaml
+++ b/faster/param/faster.yaml
@@ -4,13 +4,13 @@ use_ff: true # use feedforward
 visual: true #publish visualization stuff
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.3    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.2  #(m) Used for collision checking
+drone_radius: 0.35  #(m) Used for collision checking
 
 N_whole: 6 #[-] Number of discretization points in the whole trajectory
 N_safe: 6 #[-] Number of discretization points in the safe path
 
-Ra: 4.0            # [m] Radius of my planning sphere (planning horizon)
-R_consider_others: 9.0       # [m] Other agents are considered if they are closer than Rothers. Should satify R_consider_others>=2*Ra (because this ensures that the other agent hasn't planned a trajetory that enters my sphere of radius Ra)
+Ra: 7.0            # [m] Radius of my planning sphere (planning horizon)
+R_consider_others: 900.0       # [m] Other agents are considered if they are closer than Rothers. Should satify R_consider_others>=2*Ra (because this ensures that the other agent hasn't planned a trajetory that enters my sphere of radius Ra)
 w_max: 1           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
@@ -20,14 +20,14 @@ inflation_jps: 0.35  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 #For multi-agent simulations
-# v_max: 3.5   #[m/s]  
-# a_max: 8.0   #[m/s2] 
-# j_max: 10.0  #[m/s3] 
+v_max: 6.5   #[m/s]  
+a_max: 15.0   #[m/s2] 
+j_max: 25.0  #[m/s3] 
 
 #For single-agent simulations
-v_max: 7.0   #[m/s]  7.0
-a_max: 20.0   #[m/s2] 20.0
-j_max: 10.0  #[m/s3] 10.0
+# v_max: 7.0   #[m/s]  7.0
+# a_max: 20.0   #[m/s2] 20.0
+# j_max: 10.0  #[m/s3] 10.0
 
 #Factors for time allocation
 gamma_whole: 20       #[-]
@@ -70,9 +70,11 @@ kappa: 0.25 #% of time spent to find initial guess
 mu: 0.4    #% of time spent to solve the optimization
 
 # Samples in velocity for the A* guess used in the nlopt optimization problem
-a_star_samp_x: 7
-a_star_samp_y: 7 
-a_star_samp_z: 7 
+a_star_samp_x: 15
+a_star_samp_y: 15 
+a_star_samp_z: 15 
+
+a_star_bias: 1.0 #Bias (cost=g+bias*h) in the A* search 
 
 basis: "MINVO"  #MINVO OR B_SPLINE  This is the basis used only for collision checking
 
