param factor_vel + bug mapper size solved

--- a/faster/param/faster.yaml
+++ b/faster/param/faster.yaml
@@ -7,7 +7,7 @@ drone_radius: 0.1  #(m) Used for collision checking
 N_whole: 6 #[-] Number of discretization points in the whole trajectory
 N_safe: 6 #[-] Number of discretization points in the safe path
 
-Ra: 3.0            # [m] Radius of my planning sphere (planning horizon)
+Ra: 6            # [m] Radius of my planning sphere (planning horizon)
 R_consider_others: 900.0       # [m] Other agents are considered if they are closer than Rothers. Should satify R_consider_others>=2*Ra (because this ensures that the other agent hasn't planned a trajetory that enters my sphere of radius Ra)
 w_max: 1           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
@@ -19,7 +19,7 @@ factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map
 
 #For multi-agent simulations
 v_max: 2.5   #[m/s]  
-a_max: 10.0   #[m/s2] 
+a_max: 20.0   #[m/s2] 
 j_max: 20.0  #[m/s3] 
 
 #For single-agent simulations
@@ -72,11 +72,14 @@ a_star_samp_x: 7
 a_star_samp_y: 7 
 a_star_samp_z: 7 
 
-a_star_bias: 1.0 #Bias (cost=g+bias*h) in the A* search 
+a_star_bias: 3.0 #Bias (cost=g+bias*h) in the A* search 
 
 basis: "MINVO"  #MINVO OR B_SPLINE  This is the basis used only for collision checking
 
-res_plot_traj: 50.0  #Higher --> More resolution when plotting the trajectory 
+res_plot_traj: 6.0  #Higher --> More resolution when plotting the trajectory 
+
+
+factor_v_max: 0.6 #\in [0,1]. Used to find the total duration of a given trajectory.
 
 # Parameters for the ground robot (jackal):
 # kw: 1
