--- a/faster/param/faster.yaml
+++ b/faster/param/faster.yaml
@@ -91,7 +91,7 @@ a_star_fraction_voxel_size: 0.6 #\in [0,1] The higher, the bigger the voxel size
 
 a_star_bias: 1000.0 #Bias (cost=g+bias*h) in the A* search 
 
-basis: "B_SPLINE"  #MINVO OR B_SPLINE  This is the basis used only for collision checking
+basis: "BEZIER"  #MINVO OR B_SPLINE or BEZIER This is the basis used only for collision checking
 
 res_plot_traj: 6.0  #Higher --> More resolution when plotting the trajectory 
 
