--- a/faster/CMakeLists.txt
+++ b/faster/CMakeLists.txt
@@ -181,9 +181,9 @@ target_link_libraries(test_utils ${catkin_LIBRARIES} utils)
 
 
 
-add_executable(test_nlopt src/solvers/nlopt/test_nlopt.cpp) #src/solvers/nlopt/solverNlopt.cpp
-add_dependencies(test_nlopt ${catkin_EXPORTED_TARGETS} )
-target_link_libraries(test_nlopt ${NLOPT_LIBRARIES} spline_AStar solverNlopt)
+# add_executable(test_nlopt src/solvers/nlopt/test_nlopt.cpp) #src/solvers/nlopt/solverNlopt.cpp
+# add_dependencies(test_nlopt ${catkin_EXPORTED_TARGETS} )
+# target_link_libraries(test_nlopt ${NLOPT_LIBRARIES} spline_AStar solverNlopt)
 
 
 #add_executable(gurobi_continuous_exec gurobi_continuous.cpp)
