--- a/faster/param/faster.yaml
+++ b/faster/param/faster.yaml
@@ -66,8 +66,8 @@ gurobi_verbose: 0 #Verbosity of Gurobi. 0 or 1
 use_faster: true  #if false, it will plan only in free space
 
 #Parameters for NLOPT
-n_pol: 5
-deg: 3
+num_pol: 5
+deg_pol: 3
 samples_per_interval: 1
 weight: 10000.0 #The .0 is needed #10000  #1000000
 epsilon_tol_constraints: 0.0001
