--- a/faster/param/faster.yaml
+++ b/faster/param/faster.yaml
@@ -80,14 +80,15 @@ solver: "LD_MMA"
 #  // crash://LD_TNEWTON_PRECOND_RESTART //LD_TNEWTON_RESTART //LD_TNEWTON_PRECOND //LD_VAR1 //LD_VAR2 //LD_LBFGS_NOCEDAL
 
 # kappa + mu <=1 Ideally kappa + mu<1 (so that there is time for other stuff)
-kappa: 0.45 #SHOULDN'T BE > 0.35 (if not the optimization fails too often)% of time spent to find initial guess
-mu: 0.4    #% of time spent to solve the optimization
+kappa: 0.35 #SHOULDN'T BE > 0.35 (if not the optimization fails too often)% of time spent to find initial guess
+mu: 0.35    #% of time spent to solve the optimization
 
 # Samples in velocity for the A* guess used in the nlopt optimization problem
 a_star_samp_x: 5
 a_star_samp_y: 5 
 a_star_samp_z: 5 
 a_star_fraction_voxel_size: 0.6 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
+allow_infeasible_guess: true  #whether allow infeasible guesses to be used for the optimization. If false, straight line guess will be used in the case of an infeasible guess
 
 a_star_bias: 1000.0 #Bias (cost=g+bias*h) in the A* search 
 
