--- a/faster/param/faster.yaml
+++ b/faster/param/faster.yaml
@@ -19,14 +19,14 @@ R_local_map: 6.0 #[m] Trajectories from obstacles/agents whose center falls insi
 #####Only used if impose_fov==true
 fov_horiz_deg: 100 #[deg] \in (0,180] ,  angle between two faces of the tetrahedron 
 fov_vert_deg: 100 #[deg] \in (0,180] ,  angle between two faces of the tetrahedron 
-fov_depth: 3.0 #[m] Should be < Ra
+fov_depth: 4.0 #[m] Should be < Ra
 
 #####If impose_fov==false
 #R_consider_agents: 900       # [m] Other agents are considered if they are closer than Rothers. Should be >=2*Ra (because this ensures that the other agent hasn't planned a trajectory that enters my sphere of radius Ra)
 #R_consider_obstacles: 7.0    # [m] Other obstacles are considered if they are closer than Rothers.
 ##########################################
 
-Ra: 3.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
+Ra: 4.0           # [m] Radius of my planning sphere (planning horizon). Should be < fov_depth
 
 x_min: -1000000000.0  # [m] don't forget the .0
 x_max: 10000000000.0  # [m] don't forget the .0
@@ -54,7 +54,7 @@ alpha: 2.0 #[-] DeltaT = alpha*States_took_previous_replan
 num_pol: 5
 deg_pol: 3
 samples_per_interval: 1
-weight: 10.0 #The .0 is needed #10000  #1000000
+weight: 1000.0 #The .0 is needed #10000  #1000000
 epsilon_tol_constraints: 0.000001
 xtol_rel: 0.0000000000001 #negative value --> stopping criterion not used
 ftol_rel: 0.0000000001 #negative value --> stopping criterion not used
@@ -75,7 +75,7 @@ solver: "LD_MMA"
 # //COBYLA
 # //MMA and SLSQP
 # kappa + mu <=1 Ideally kappa + mu<1 (so that there is time for other stuff)
-upper_bound_runtime_snlopt: 0.3 #[seconds] snlopt (init guess + solver) will never take longer than this amount of seconds
+upper_bound_runtime_snlopt: 1.0 #[seconds] snlopt (init guess + solver) will never take longer than this amount of seconds
 kappa: 0.3 #% of time spent to find initial guess
 mu: 0.15    #% of time spent to solve the optimization
 
@@ -86,14 +86,15 @@ a_star_samp_z: 5
 a_star_fraction_voxel_size: 0.5 #\in [0,1] The higher, the bigger the voxel size in A* is(i.e. more prunning)
 allow_infeasible_guess: true  #whether allow infeasible guesses to be used for the optimization. If false, straight line guess will be used in the case of an infeasible guess
 
-a_star_bias: 10000.0 #Bias (cost=g+bias*h) in the A* search 
+a_star_bias: 100.0 #Bias (cost=g+bias*h) in the A* search 
 
 basis: "B_SPLINE"  #MINVO OR B_SPLINE or BEZIER This is the basis used only for collision checking
 
 res_plot_traj: 6.0  #Higher --> More resolution when plotting the trajectory 
 
-factor_v_max: 0.6 #\in [0,1]. Used to find the total duration of a given trajectory.
+factor_v_max: 1.0 #\in [0,1]. Used to find the total duration of a given trajectory.
 
+alpha_shrink: 0.9 #\in [0,1] Only used for MINVO/Bezier
 
 beta: 1.0 #[-] >=1 Parameter modelling the uncertainty of the current position of the obstacles
 gamma: 0.0 #[-] >=0 Parameter modelling the uncertainty of the future trajectory of the obstacles
