--- a/faster/param/faster.yaml
+++ b/faster/param/faster.yaml
@@ -38,14 +38,14 @@ z_ground: 0.2         #[m] points below this are considered ground
 z_max: 3.0         #[m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
-# v_max: 2.5   #[m/s]  
-# a_max: 20.0   #[m/s2] 
-# j_max: 20.0  #[m/s3] 
+v_max: [5.0, 5.0, 5.0]   #[m/s]  
+a_max: [20.0, 20.0, 9.6]   #[m/s2] 
+j_max: [50.0, 50.0, 50.0]  #[m/s3] 
 
 #For single-agent simulations
-v_max: [5.0, 5.0, 5.0]   #[m/s]  7.0
-a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
-j_max: [50.0, 50.0, 50.0]  #[m/s3] 10.0
+# v_max: [5.0, 5.0, 5.0]   #[m/s]  7.0
+# a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+# j_max: [50.0, 50.0, 50.0]  #[m/s3] 10.0
 
 
 alpha: 1.5 #[-] DeltaT = alpha*States_took_previous_replan
