--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,20 @@
 [submodule "acl-gazebo"]
 	path = acl-gazebo
 	url = git@gitlab.com:mit-acl/lab/acl-gazebo.git
+	branch = master
 [submodule "catkin_simple"]
 	path = catkin_simple
 	url = https://github.com/catkin/catkin_simple.git
+	branch = master
 [submodule "separator"]
 	path = separator
 	url = git@github.com:jtorde/separator.git
+	branch = master
 [submodule "behavior_selector"]
 	path = behavior_selector
 	url = git@gitlab.com:mit-acl/fsw/behavior_selector.git
+	branch = master
 [submodule "snapstack_msgs"]
 	path = snapstack_msgs
 	url = git@gitlab.com:mit-acl/fsw/snap-stack/snapstack_msgs.git
+	branch = master
