--- a/mader/param/mader.yaml
+++ b/mader/param/mader.yaml
@@ -1,8 +1,8 @@
 use_ff: true # use feedforward
-#visual: true #publish visualization stuff
+visual: true #publish visualization stuff
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.05    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.0001  #(m) Used for collision checking
+drone_radius: 0.15  #(m) Used for collision checking
 
 w_max: 1.0           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
@@ -35,13 +35,13 @@ z_ground: 0.2         #[m] points below this are considered ground
 z_max: 4.0         #[m] JPS is not allowed to give a solution that goes higher than this height
 
 #For multi-agent simulations
-# v_max: [1.7, 1.7, 1.7]   #[m/s]  
-# a_max: [6.2, 6.2, 6.2]   #[m/s2] 
+v_max: [5.0, 5.0, 5.0]   #[m/s]  
+a_max: [20.0, 20.0, 9.6]   #[m/s2] 
 
 
 #For single-agent simulations
-v_max: [5.0, 5.0, 5.0]   #[m/s]  7.0
-a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
+# v_max: [5.0, 5.0, 5.0]   #[m/s]  7.0
+# a_max: [20.0, 20.0, 9.6]   #[m/s2] Note that if a_max.z() > 9.81, the drone may flip
 
 
 
@@ -85,7 +85,7 @@ allow_infeasible_guess: true  #whether allow infeasible guesses to be used for t
 
 a_star_bias: 1.0 #Bias (cost=g+bias*h) in the A* search 
 
-#basis: "MINVO"  #MINVO OR B_SPLINE or BEZIER This is the basis used only for collision checking
+basis: "MINVO"  #MINVO OR B_SPLINE or BEZIER This is the basis used only for collision checking
 
 res_plot_traj: 15.0  #Higher --> More resolution when plotting the trajectory 
 
